--- a/experiments.tex
+++ b/experiments.tex
@@ -97,12 +97,12 @@ ms vs. 8.7 s when using calibration.
     \hline
     Methods (AP/MPPE) & before calib.  & time & after calib.~\cite{Aubry14} & time \\
     \hline\hline
-    HOG\cite{Dalal05}     & 72.3 / 65.0           &  31ms  & 60.4 / 50.2                 & 8.7 sec \\ 
-    WHO\cite{Hariharan12} & 82.1 / 85.4           &  3811ms& 84.4 / 83.0                 & 12.4 sec  \\
-    WHO-CG                & 81.7 / \textbf{84.9}  &  104ms & 83.7 / 87.3                 & 8.3 sec \\
-    WHO-CG-Z              & 54.4 / 65.1           &  103ms & \textbf{92.8} / 86.7        & 8.7 sec  \\
-    % NZC-WHO-Z    & 89.10/\textbf{78.64} &    & 91.15/74.79                  &     \\
-    NZ-WHO-CG {\em (ours)}  & \textbf{90.0} / 82.8  &   79ms & 90.3 / \textbf{86.8}        & 8.5 sec   \\
+    HOG\cite{Dalal05}      & 72.3 / 65.0          &  31ms  & 60.4 / 50.2           & 8.7 sec \\ 
+    WHO\cite{Hariharan12}  & 82.1 / \textbf{85.4} &  3811ms& 84.4 / 83.0           & 12.4 sec\\
+    WHO-CG                 & 81.7 / 84.9          &  104ms & 83.7 / \textbf{87.3}  & 8.3 sec \\
+    WHO-CG-Z               & 54.4 / 65.1          &  103ms & \textbf{92.8} / 86.7  & 8.7 sec \\
+    % NZC-WHO-Z    & 89.10 /\textbf{78.64} &    & 91.15 / 74.79                  &     \\
+    NZ-WHO-CG {\em (ours)} & \textbf{90.0} / 82.8 &   79ms & 90.3 / 86.8           & 8.5 sec \\
     \hline
   \end{tabular}
   \caption{Average Precision(AP), Mean Precision in Pose Estimation
@@ -201,7 +201,7 @@ with costly bounding box and viewpoint annotations.
 \caption{Detection results on 3D Object
   Classes~\cite{Savarese07}. Original image (left) and detection
   result overlaid on top (right).}% with a bounding box and corresponding confidence score (right).}
-  \label{fig:3dobject}
+  \label{fig:3dobject_vis}
 \end{figure}
 
 
@@ -275,14 +275,13 @@ augment it using our method to give viewpoint estimation. We use
 detection bounding boxes from two different methods:
 DPM-VOC+VP\cite{Pepik12} and R-CNN~\cite{Girshick14}, both in their
 variants trained on 8 viewpoint categories, since these perform best
-in terms of AP. For both methods,
+in terms of AP. For both cases,
 we use the original score for plotting precision-recall curves
 (meaning that we can not improve over their AP), but
 enrich the detections with additional viewpoint information provided
-by our method. For DPM-VOC+VP, we fall back to the viewpoint
-estimation provided by this method in case the confidence of our
-method falls below a threshold. For R-CNN, we fall back to a default
-viewpoint prediction ($0$ angles).
+by our method. We fall back to a default
+viewpoint prediction ($0$ angles) in case the confidence of our
+method falls below a threshold.
 
 For both cases, we compare the performance of a discrete incarnation
 of our method (Sect.~\ref{sec:approach}) and our full model, including the
