--- a/mcmc.tex
+++ b/mcmc.tex
@@ -71,7 +71,7 @@ $c = 0.1$ for all experiments.
 \begin{figure}[t]
 \centering
     \includegraphics[width=0.7\linewidth]{tuning2} \\ [-5pt]
-    \caption{Metropolis Hastings move types that are handled in fine-tuning stage (Section~\ref{sec:fine}).}
+    \caption{Search space that our fine-tuning stage handles (Section~\ref{sec:fine}).}
  \label{fig:moves}
 \end{figure}
 
