Added selector matrix $S$ that generates $x', \mu', \Sigma'$.

--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -21,7 +21,7 @@
 % run, let it finish, and you should be clear).
 \usepackage[breaklinks=true,bookmarks=false]{hyperref}
 \graphicspath{ {figures/} }
-% \cvprfinalcopy % *** Uncomment this line for the final submission
+\cvprfinalcopy % *** Uncomment this line for the final submission
 
 \def\cvprPaperID{2349} % *** Enter the CVPR Paper ID here
 \def\httilde{\mbox{\tt\raisebox{-.5ex}{\symbol{126}}}}
@@ -38,20 +38,14 @@
 \title{Enriching Object Detection with 2D-3D Registration\\and Continuous Viewpoint Estimation}
 %\title{Enrich Object Detection : 2D-3D registration and continuous viewpoint estimation}
 
-\author{First Author\\
-Institution1\\
-Institution1 address\\
-{\tt\small firstauthor@i1.org}
+\author{Christopher B. Choy, Michael Stark, Sam Corbett-Davies, Silvio Savarese\\
+    Stanford University, Max Plank Institutes\\
+    {\tt\small \{chrischoy, scorbett, stark, ssilvio\}@stanford.edu}
 % For a paper whose authors are all at the same institution,
 % omit the following lines up until the closing ``}''.
 % Additional authors and addresses can be added with ``\and'',
 % just like the second author.
 % To save space, use either the email address or home page, not both
-\and
-Second Author\\
-Institution2\\
-First line of institution2 address\\
-{\tt\small secondauthor@i2.org}
 }
 
 \maketitle
