--- a/approach.tex
+++ b/approach.tex
@@ -16,17 +16,16 @@ convolutions in the frequency domain (Sect.~\ref{sec:fft}).
 \subsection{Rendering}
 \label{sec:rendering}
 
-We used a public rendering engine to create realistic rendering and
-depth. We used CAD models that contain color, texture and material information such as
-transparency and reflectance to make the rendering as much realistic
-as possible to simulate the natural image statistics. The example rendering is
-in Fig. \ref{fig:rendering}. We also extracted depth information as well while
-rendering to use in the reconstruction.
+We used an off-the-shelf rendering engine that can create a realistic rendering and
+a depth map. The CAD models we used contain color, texture and material information such as
+transparency and reflectance to make the rendering as realistic
+as possible to simulate the natural image statistics. An rendering example that we used in our experiments is
+in Fig. \ref{fig:rendering}. Along with a rendering, we extracted a depth map which can later 
+be used for reconstruction.
 
-We used a collection of CAD models to make exemplar renderings of CAD models and for viewpoints. The
-CAD models are cached so that when we fine-tune 2D-3D matching, so it can be rendered instantaneously.
-We made the renderings to change focal length and yaw, pitch, roll so that we can fine tune the matching
-continuously.
+To handle intraclass variability, we used various CAD models (sedan, truck, racing car, hatchback etc) to cover intraclass variability and made renderings of these CAD models for various viewpoints. The
+CAD models were cached so that when we fine-tune 2D-3D matching, we can render the model instantaneously.
+Our renderer can continuously vary yaw, pitch, roll and the focal length as well so that the final fine tuning stage produces accurate the continuous viewpoint, a focal length and a bounding box.
 
 \begin{figure}[t]
   \begin{center}
@@ -40,20 +39,22 @@ continuously.
 
 \subsection{Whitened Histograms of Orientations (WHO)}
 \label{sec:who}
-Our technique for rendering and training template detectors on-the-fly
+Our technique for rendering and generating exemplar template detectors on-the-fly
 is drawing from recent work. Hariharan \etal. introduced Whitened Histograms of Orientations (WHO)
 \cite{Hariharan12}, which uses feature statistics from natural images to whiten HOG
 templates, making them more discriminative. Whitening is a common signal
 processing operation for decorrelating a set of random variables
-
 \cite{Martinsson05, Belouchrani00}. More formally, suppose that we have a
 $k$-dimensional random variable $X \in \mathcal{R}^k$ with $Cov(X)=\Sigma$. By
 whitening the signal,
+
 \begin{equation}
 \tilde{X}=\Sigma^{-\frac{1}{2}}(X - E[X]) \label{eq:whitening},
 \end{equation}
-we remove 2nd order correlation between all features. Since collecting covariance matrix for every template shape
- is expensive, \cite{Hariharan12} proposed easy way to synthesize
+
+we remove 2nd order correlation between all features. Since collecting covariance
+matrix for every template shape is expensive, \cite{Hariharan12} proposed an easy
+way to synthesize
 covariance $\Sigma$ from autocovariance $\Gamma$ and we followed their
 method to generate $\Sigma$.
 
@@ -118,19 +119,32 @@ This could result in positive matches being suppressed due to spurious
 background gradients.
 
 NZ-WHO removes these artifacts so that the background has no effect on the
-template response. Let $T$ be the feature extraction transformation and $p$ be
-the rendering setting (see Sect.~\ref{sec:fine}). Given HOG features $x=T(I_r)$
-from rendering image $I_r$, we create a new vector $x'$ which
-contains only the non-zero elements of $x$. We select the corresponding elements of
-$\mu$ to produce $\mu'$, while the autocovariance lookup is only performed for
-the cells with non-zero gradient, producing $\Sigma'$ corresponding to the
-features in $x'$. After solving the resulting system (which is now smaller than
+template response. Let a vectorized HOG features of a rendering image $x\in
+\mathcal{R}^{nd}$ be $x=T_f(I_r)$ where $n$ is the number HOG cells and $d$ be
+the dimension of HOG feature. We create a new vector $x'$ which contains only
+the non-zero elements of $x$. To be specific, let $I_d\in \mathcal{R}^{d\times
+    d}$ be the identity matrix, $n'$ be the number of non-zero HOG cells, and a
+matrix $S\in \mathcal{R}^{n'd \times nd}$ be the masking matrix that selects
+non-zero HOG cell. For instance, a template has  $n=3, n'=2$, and only the
+second HOG cell has $0$ norm, then
+
+\begin{align}
+S = \left[ \begin{array}{ccc}
+        I_d & \mathbf{0} & \mathbf{0}\\
+        \mathbf{0} & \mathbf{0} & I_d
+        \end{array} \right]
+\end{align}
+
+Then, we can define $x' = S x, \mu' = S\mu, \Sigma' = S \Sigma S^T$.
+After solving the resulting system (which is now smaller than
 in the WHO approach) we find
 
 \begin{equation}
 w'=\Sigma'^{-1}(x' - \mu') \label{eq:nz-who},
-\end{equation}which we reassemble into the final NZ-WHO template $w$ by
-replacing the non-zero elements of $x$ with the corresponding $w'$ element.
+\end{equation}
+
+which we restore zero cells and reshape the vector into the final NZ-WHO
+template that has the same dimension as the original HOG template.
 
 % Notice that $\Sigma$ is not square-rooted in Eq.~\ref{eq:nz-who}, whereas it is
 % in the definition of whitening (Eq.~\ref{eq:whitening}). This is because the
@@ -210,7 +224,7 @@ number to the point where the conjugate gradient method will converge quickly.
 We use a constant of $0.15$, which reduces the condition number from $10^{20}$
 to $50$, much smaller than the dimension of the matrix (7000).
 
-As a result, a GPU implementation of conjugate gradient converges in 50
+As a result, a GPU implementation of conjugate gradient converges in 80
 ms when using 250 HOG cells, two orders of magnitude faster than the using
 Cholesky factorization with Gaussian Elimination.
 
@@ -222,7 +236,7 @@ speedup. We see that % We compare the speed of each of template generation metho
 % Fig.~\cite{fig:covariancetime_crop} Using naive Cholesky decomposition,
 WHO template takes several seconds for realistic template sizes of
 several hundred cells, while using the iterative Conjugate Gradient
-method, it only takes 100ms. If we use NZ-WHO, we can gain extra speed
+method, it only takes 80ms. If we use NZ-WHO, we can gain extra speed
 up since we only whitens non-zero cells.
 
 In addition, since the iterative Conjugate Gradient method directly
