--- a/experiments.tex
+++ b/experiments.tex
@@ -330,10 +330,10 @@ fine-tuned visually comes closer to the true 3D pose.
   \includegraphics[width=0.24\textwidth]{car_cnn/1c.png} &   
   \includegraphics[width=0.24\textwidth]{car_cnn/1d.png}  \\  
 %   \hline
-  \includegraphics[width=0.24\textwidth]{car_cnn/2a.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2b.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2c.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2e.png}  \\  
+%  \includegraphics[width=0.24\textwidth]{car_cnn/2a.png} &   
+%  \includegraphics[width=0.24\textwidth]{car_cnn/2b.png} &   
+%  \includegraphics[width=0.24\textwidth]{car_cnn/2c.png} &   
+%  \includegraphics[width=0.24\textwidth]{car_cnn/2e.png}  \\  
 %   \hline
   \includegraphics[width=0.24\textwidth]{car_cnn/4a.png} &   
   \includegraphics[width=0.24\textwidth]{car_cnn/4b.png} &   
@@ -374,7 +374,7 @@ fine-tuned visually comes closer to the true 3D pose.
 \end{figure*}
 %
 \begin{table*}[t]
-\footnotesize
+	\scriptsize
   \begin{center}
     \begin{tabular}{|c||c||c||c|c||c|c|}
     \hline
