--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -38,8 +38,8 @@
 \title{Enriching Object Detection with 2D-3D Registration\\and Continuous Viewpoint Estimation}
 %\title{Enrich Object Detection : 2D-3D registration and continuous viewpoint estimation}
 
-\author{Christopher B. Choy, Michael Stark, Sam Corbett-Davies, Silvio Savarese\\
-    Stanford University, Max Plank Institutes\\
+\author{Christopher Bongsoo Choy\textsuperscript{\dag}, Michael Stark\textsuperscript{\dag \ddag}, Sam Corbett-Davies\textsuperscript{\dag}, Silvio Savarese\textsuperscript{\dag}\\
+    Stanford University\textsuperscript{\dag}, Max Plank Institutes\textsuperscript{\ddag}\\
     {\tt\small \{chrischoy, scorbett, stark, ssilvio\}@stanford.edu}
 % For a paper whose authors are all at the same institution,
 % omit the following lines up until the closing ``}''.
@@ -121,7 +121,6 @@ we validate its performance on 3D Object Classes and PASCAL3D+ datasets.
 \label{sec:related}
 \input{related}
 
-
 \section{Approach Overview}
 \label{sec:nz-who}
 \input{overview}
@@ -142,6 +141,9 @@ we validate its performance on 3D Object Classes and PASCAL3D+ datasets.
 \label{conclusion}
 \vspace{-.2cm}
 \input{conclusion}
+
+\section{Acknowledgement}
+This work has been supported by the Max Planck Center for Visual Computing \& Communication.
 
 \clearpage
 \clearpage
